--- a/tests/main.html
+++ b/tests/main.html
@@ -12,9 +12,14 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 <link rel="shortcut icon" href="">
+<!-- jQuery -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!--  AgentSmith -->
 <script src="../agent_smith/src/agent_smith.js"></script>
 <script src="../agent_smith/src/agent_smith_cl.js"></script>
+<!-- AgentSmithML Libraries -->
+<script src="../utils/mnist_loader.js"></script>
+<!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
 <script>
