--- a/clustering/test_k_means.html
+++ b/clustering/test_k_means.html
@@ -10,9 +10,9 @@
 <link rel="shortcut icon" href="">
 <script src="http://underscorejs.org/underscore-min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="/Users/kanehira/Desktop/agent_smith/src/agent_smith.js"></script>
-<script src="/Users/kanehira/Desktop/agent_smith/src/agent_smith_cl.js"></script>
-<script src="./testjs.js"></script>
+<script src="../agent_smith/src/agent_smith.js"></script>
+<script src="../agent_smith/src/agent_smith_cl.js"></script>
+<script src="./k_means.js"></script>
 </head>
 <body>
 See Console.
