--- a/tests/main.html
+++ b/tests/main.html
@@ -17,8 +17,12 @@
 <!--  AgentSmith -->
 <script src="../agent_smith/src/agent_smith.js"></script>
 <script src="../agent_smith/src/agent_smith_cl.js"></script>
-<!-- AgentSmithML Libraries -->
+<!-- AgentSmithML Utilities -->
 <script src="../utils/mnist_loader.js"></script>
+<!-- AgentSmithML Main Libraries -->
+<script src="../src/agent_smith_ml.js"></script>
+<script src="../src/linear_model/linear_model.js"></script>
+<script src="../src/linear_model/lasso.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
