--- a/tests/main.html
+++ b/tests/main.html
@@ -14,6 +14,8 @@
 <link rel="shortcut icon" href="">
 <!-- jQuery -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://underscorejs.org/underscore-min.js"></script>
+<script type="text/javascript" src="numeric-1.2.6.min.js"></script>
 <!--  AgentSmith -->
 <script src="../agent_smith/src/agent_smith.js"></script>
 <script src="../agent_smith/src/agent_smith_cl.js"></script>
@@ -23,9 +25,12 @@
 <script src="../src/agent_smith_ml.js"></script>
 <script src="../src/linear_model/linear_model.js"></script>
 <script src="../src/linear_model/lasso.js"></script>
+<script src="../src/cluster/cluster.js"></script>
+<script src="../src/cluster/k_means.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
+<script src="./k_means_test.js"></script>
 <script>
 $(function() {
 	TestMain.Tester.setNotifier(function(msg) {
