--- a/tests/main.html
+++ b/tests/main.html
@@ -22,7 +22,9 @@
 <!-- AgentSmithML Main Libraries -->
 <script src="../src/agent_smith_ml.js"></script>
 <script src="../src/linear_model/linear_model.js"></script>
-<script src="../src/linear_model/lasso.js"></script>
+<script src="../src/linear_model/base.js"></script>
+<script src="../src/linear_model/linear_regression.js"></script>
+<!-- <script src="../src/linear_model/lasso.js"></script> --!>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
