--- a/tests/main.html
+++ b/tests/main.html
@@ -19,6 +19,8 @@
 <script src="../agent_smith/src/agent_smith_cl.js"></script>
 <!-- AgentSmithML Utilities -->
 <script src="../utils/mnist_loader.js"></script>
+<script src="../visualizer/ccchart.js"></script>
+<script src="../visualizer/agent_smith_visualizer.js"></script>
 <!-- AgentSmithML Main Libraries -->
 <script src="../src/agent_smith_ml.js"></script>
 <script src="../src/linear_model/linear_model.js"></script>
@@ -26,6 +28,7 @@
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
+<script src="./visualizer_test.js"></script>
 <script>
 $(function() {
 	TestMain.Tester.setNotifier(function(msg) {
