--- a/tests/main.html
+++ b/tests/main.html
@@ -31,6 +31,8 @@
 <script src="../src/cluster/k_means.js"></script>
 <script src="../src/decomposition/decomposition.js"></script>
 <script src="../src/decomposition/pca.js"></script>
+<script src="../src/metrics/metrics.js"></script>
+<script src="../src/metrics/pariwise.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
