--- a/tests/main.html
+++ b/tests/main.html
@@ -23,9 +23,12 @@
 <script src="../src/agent_smith_ml.js"></script>
 <script src="../src/linear_model/linear_model.js"></script>
 <script src="../src/linear_model/lasso.js"></script>
+<script src="../src/neighbors/neighbors.js"></script>
+<script src="../src/neighbors/nearest_neighbors.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
+<script src="./neighbors/nearest_neighbors_test.js"></script>
 <script>
 $(function() {
 	TestMain.Tester.setNotifier(function(msg) {
