Add tests and implement Metric.Pairwise.euclidean_distances and row_norms

--- a/tests/main.html
+++ b/tests/main.html
@@ -32,7 +32,7 @@
 <script src="../src/decomposition/decomposition.js"></script>
 <script src="../src/decomposition/pca.js"></script>
 <script src="../src/metrics/metrics.js"></script>
-<script src="../src/metrics/pariwise.js"></script>
+<script src="../src/metrics/pairwise.js"></script>
 <script src="../src/neighbors/neighbors.js"></script>
 <script src="../src/neighbors/nearest_neighbors.js"></script>
 <!-- Test Libraries -->
@@ -42,6 +42,7 @@
 <script src="./pca_test.js"></script>
 <script src="./visualizer_test.js"></script>
 <script src="./neighbors/nearest_neighbors_test.js"></script>
+<script src="./metrics/pairwise_test.js"></script>
 <script>
   $(function() {
   TestMain.Tester.setNotifier(function(msg) {
