test added, many algorithms have changed

--- a/tests/main.html
+++ b/tests/main.html
@@ -24,10 +24,14 @@
 <script src="../src/linear_model/linear_model.js"></script>
 <script src="../src/linear_model/base.js"></script>
 <script src="../src/linear_model/linear_regression.js"></script>
-<!-- <script src="../src/linear_model/lasso.js"></script> --!>
+<script src="../src/linear_model/lasso.js"></script>
+<script src="../src/linear_model/ridge.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
+<script src="./linear_regression_test.js"></script>
+<script src="./lasso_test.js"></script>
+<script src="./ridge_test.js"></script>
 <script>
 $(function() {
 	TestMain.Tester.setNotifier(function(msg) {
