--- a/tests/main.html
+++ b/tests/main.html
@@ -35,6 +35,7 @@
 <script src="../src/metrics/pairwise.js"></script>
 <script src="../src/neighbors/neighbors.js"></script>
 <script src="../src/neighbors/nearest_neighbors.js"></script>
+<script src="../src/neighbors/classification.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
@@ -42,6 +43,7 @@
 <script src="./pca_test.js"></script>
 <script src="./visualizer_test.js"></script>
 <script src="./neighbors/nearest_neighbors_test.js"></script>
+<script src="./neighbors/classification_test.js"></script>
 <script src="./metrics/pairwise_test.js"></script>
 <script>
   $(function() {
