revise pairwise_test.js

--- a/tests/main.html
+++ b/tests/main.html
@@ -31,17 +31,18 @@
 <script src="../src/cluster/k_means.js"></script>
 <script src="../src/decomposition/decomposition.js"></script>
 <script src="../src/decomposition/pca.js"></script>
-<script src="../src/metrics/metrics.js"></script>
-<script src="../src/metrics/pairwise.js"></script>
 <script src="../src/neighbors/neighbors.js"></script>
 <script src="../src/neighbors/nearest_neighbors.js"></script>
 <script src="../src/neighbors/classification.js"></script>
+<script src="../src/metrics/metrics.js"></script>
+<script src="../src/metrics/pairwise.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
-<script src="./k_means_test.js"></script>
-<script src="./pca_test.js"></script>
+<script src="./cluster/k_means_test.js"></script>
+<script src="./decomposition/pca_test.js"></script>
 <script src="./visualizer_test.js"></script>
+<script src="./metrics/pairwise_test.js"></script>
 <script src="./neighbors/nearest_neighbors_test.js"></script>
 <script src="./neighbors/classification_test.js"></script>
 <script src="./metrics/pairwise_test.js"></script>
