--- a/tests/main.html
+++ b/tests/main.html
@@ -39,6 +39,8 @@
 <script src="../src/neighbors/classification.js"></script>
 <script src="../src/metrics/metrics.js"></script>
 <script src="../src/metrics/pairwise.js"></script>
+<script src="../src/mixture/mixture.js"></script>
+<script src="../src/mixture/gmm.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
@@ -52,6 +54,7 @@
 <script src="./linear_regression_test.js"></script>
 <script src="./lasso_test.js"></script>
 <script src="./ridge_test.js"></script>
+<script src="./mixture/gmm_test.js"></script>
 <script>
   $(function() {
   TestMain.Tester.setNotifier(function(msg) {
