add util statistics

--- a/tests/main.html
+++ b/tests/main.html
@@ -41,6 +41,8 @@
 <script src="../src/metrics/pairwise.js"></script>
 <script src="../src/mixture/mixture.js"></script>
 <script src="../src/mixture/gmm.js"></script>
+<script src="../src/utils/utils.js"></script>
+<script src="../src/utils/statistics.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
@@ -55,6 +57,7 @@
 <script src="./lasso_test.js"></script>
 <script src="./ridge_test.js"></script>
 <script src="./mixture/gmm_test.js"></script>
+<script src="./utils/statistics_test.js"></script>
 <script>
   $(function() {
   TestMain.Tester.setNotifier(function(msg) {
