--- a/tests/main.html
+++ b/tests/main.html
@@ -39,6 +39,8 @@
 <script src="../src/cluster/k_means.js"></script>
 <script src="../src/decomposition/decomposition.js"></script>
 <script src="../src/decomposition/pca.js"></script>
+<script src="../src/cross_decomposition/cross_decomposition.js"></script>
+<script src="../src/cross_decomposition/cca.js"></script>
 <script src="../src/neighbors/neighbors.js"></script>
 <script src="../src/neighbors/nearest_neighbors.js"></script>
 <script src="../src/neighbors/classification.js"></script>
@@ -58,19 +60,14 @@
 <script src="./neighbors/nearest_neighbors_test.js"></script>
 <script src="./neighbors/classification_test.js"></script>
 <script src="./metrics/pairwise_test.js"></script>
-<<<<<<< HEAD
-<script src="./linear_regression_test.js"></script>
-<script src="./lasso_test.js"></script>
-<script src="./ridge_test.js"></script>
 <script src="./mixture/gmm_test.js"></script>
+<script src="./cross_decomposition/cca_test.js"></script>
 <script src="./utils/statistics_test.js"></script>
-=======
 <script src="./linear_model/linear_regression_test.js"></script>
 <script src="./linear_model/lasso_test.js"></script>
 <script src="./linear_model/ridge_test.js"></script>
 <script src="./linear_model/perceptron_test.js"></script>
 <script src="./linear_model/logistic_test.js"></script>
->>>>>>> 9a17205ef74f7af412372aa47b3577c4a4293ecd
 <script>
   $(function() {
   TestMain.Tester.setNotifier(function(msg) {
