rename agent_smith_ml -> neo

--- a/tests/main.html
+++ b/tests/main.html
@@ -24,7 +24,7 @@
 <script src="../visualizer/ccchart.js"></script>
 <script src="../visualizer/agent_smith_visualizer.js"></script>
 <!-- AgentSmithML Main Libraries -->
-<script src="../src/agent_smith_ml.js"></script>
+<script src="../src/neo.js"></script>
 <script src="../src/utils/utils.js"></script>
 <script src="../src/utils/statistics.js"></script>
 <script src="../src/utils/checkargs.js"></script>
