--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
 		<script src="../agent_smith/src/agent_smith_cl.js"></script>
 		
 		<!-- AgentSmithML Main Libraries -->
-		<script src="../src/agent_smith_ml.js"></script>
+		<script src="../src/neo.js"></script>
 		<script src="../src/utils/utils.js"></script>
 		<script src="../src/utils/statistics.js"></script>
 		<script src="../src/utils/checkargs.js"></script>
