Add linspace and meshgrid

--- a/tests/main.html
+++ b/tests/main.html
@@ -50,6 +50,8 @@
 <script src="../src/mixture/gmm.js"></script>
 <script src="../src/utils/utils.js"></script>
 <script src="../src/utils/statistics.js"></script>
+<script src="../src/utils/linspace.js"></script>
+<script src="../src/utils/meshgrid.js"></script>
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./loader_test.js"></script>
@@ -68,6 +70,8 @@
 <script src="./linear_model/ridge_test.js"></script>
 <script src="./linear_model/perceptron_test.js"></script>
 <script src="./linear_model/logistic_test.js"></script>
+<script src="./utils/meshgrid_test.js"></script>
+<script src="./utils/linspace_test.js"></script>
 <script>
   $(function() {
   TestMain.Tester.setNotifier(function(msg) {
