--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,7 @@
 		<script src="../src/linear_model/linear_model.js"></script>
 		<script src="../src/linear_model/base.js"></script>
 		<script src="../src/linear_model/perceptron.js"></script>
+		<script src="../src/linear_model/sgd_regressor.js"></script>
 		
 		<!-- Trinity Libraries and dependencies -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -31,6 +32,7 @@
 		<script src="./js/demo.js"></script>
 		<script src="./js/demos/visualizer.js"></script>
 		<script src="./js/demos/perceptron.js"></script>
+		<script src="./js/demos/sgd_regressor.js"></script>
 		
 		<link rel="stylesheet" href="./trinity/src/trinity.css">
 		<link rel="stylesheet" href="./trinity/src/trinity_modal.css">
