Add demo of nearest neighbor classification

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,11 @@
 		<script src="../src/linear_model/linear_model.js"></script>
 		<script src="../src/linear_model/base.js"></script>
 		<script src="../src/linear_model/perceptron.js"></script>
+		<script src="../src/metrics/metrics.js"></script>
+		<script src="../src/metrics/pairwise.js"></script>
+		<script src="../src/neighbors/neighbors.js"></script>
+		<script src="../src/neighbors/nearest_neighbors.js"></script>
+		<script src="../src/neighbors/classification.js"></script>
 		
 		<!-- Trinity Libraries and dependencies -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -34,6 +39,7 @@
 		<script src="./js/demos/visualizer.js"></script>
 		<script src="./js/demos/perceptron.js"></script>
 		<script src="./js/demos/perceptron_contour.js"></script>
+		<script src="./js/demos/nearest_neighbor_classifier.js"></script>
 		
 		<link rel="stylesheet" href="./trinity/src/trinity.css">
 		<link rel="stylesheet" href="./trinity/src/trinity_modal.css">
