--- a/demo/index.html
+++ b/demo/index.html
@@ -77,7 +77,9 @@
 								<div class="panel-heading">
 									<h4>Code</h4>
 								</div>
-								<div class="panel-body" id="code">
+								<div class="panel-body">
+									<pre id="code">
+									</pre>
 								</div>
 							</div>
 						</div>
