--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,10 @@
 		<script src="../src/neighbors/neighbors.js"></script>
 		<script src="../src/neighbors/nearest_neighbors.js"></script>
 		<script src="../src/neighbors/classification.js"></script>
+		<script src="../src/cluster/cluster.js"></script>
+		<script src="../src/cluster/k_means.js"></script>
+		<script src="../src/mixture/mixture.js"></script>
+		<script src="../src/mixture/gmm.js"></script>
 		
 		<!-- Trinity Libraries and dependencies -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -42,6 +46,7 @@
 		<script src="./js/demos/sgd_regressor.js"></script>
 		<script src="./js/demos/perceptron_contour.js"></script>
 		<script src="./js/demos/nearest_neighbor_classifier.js"></script>
+		<script src="./js/demos/gmm.js"></script>
 		
 		<link rel="stylesheet" href="./trinity/src/trinity.css">
 		<link rel="stylesheet" href="./trinity/src/trinity_modal.css">
