--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Demo</title>
+		<title>Neo demo page</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
 		<!--  AgentSmith -->
@@ -58,7 +58,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">AgentSmithML demos</a>
+      <a class="navbar-brand" href="#">Neo demos</a>
     </div>
   </div><!-- /.container-fluid -->
 </nav>
