Design demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -73,7 +73,8 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12" id="content">
+						<div class="col-md-12">
+							<div id="content"></div>
 						</div>
 					</div>
 					<div class="row">
