remove submodule trinity

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,8 +32,8 @@
 		<!-- Trinity Libraries and dependencies -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-		<script src="./trinity/src/trinity.js"></script>
-		<script src="./trinity/src/trinity_modal.js"></script>
+		<script src="http://mil-tokyo.github.io/trinity/src/trinity.js"></script>
+		<script src="http://mil-tokyo.github.io/trinity/src/trinity_modal.js"></script>
 		
 		<!-- bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
