--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-	<pre><code>$ cd your_repo_root/repo_name
+	<pre><code>
+	    $ cd your_repo_root/repo_name
 	    $ git fetch origin
 	    $ git checkout gh-pages
 	</code></pre>
 
 	<h2>Getting Started</h2>
 	<ul id="getting started">
-	<li class="content list">Getting AgentSmith</li>
+	<li class="content list"><a href="https://github.com/mil-tokyo/agent_smith">Getting AgentSmith</a></li>
 	<li class="content list"><a href="./docs/index.html">Neo Documentation page</a></li>
 	<li class="content list"><a href="./demo/index.html">Neo Demo page</a></li>
 	<li class="content list"><a href="http://www.amazon.co.jp">Neo Mailing list</a></li>
