Remove submodule trinity

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,8 +32,7 @@
 		<!-- Trinity Libraries and dependencies -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-		<script src="./trinity/src/trinity.js"></script>
-		<script src="./trinity/src/trinity_modal.js"></script>
+		<script src="./js/trinity.js"></script>
 		
 		<!-- bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -48,8 +47,7 @@
 		<script src="./js/demos/nearest_neighbor_classifier.js"></script>
 		<script src="./js/demos/gmm.js"></script>
 		
-		<link rel="stylesheet" href="./trinity/src/trinity.css">
-		<link rel="stylesheet" href="./trinity/src/trinity_modal.css">
+		<link rel="stylesheet" href="./css/trinity.css">
 		<link rel="stylesheet" href="./css/demo.css">
 	</head>
 
