--- a/tests/main.html
+++ b/tests/main.html
@@ -18,6 +18,8 @@
 <script src="../agent_smith/src/agent_smith.js"></script>
 <script src="../agent_smith/src/agent_smith_cl.js"></script>
 <!-- AgentSmithML Main Libraries -->
+<script src="../bin/neo.js"></script>
+<!--
 <script src="../src/neo.js"></script>
 <script src="../src/utils/utils.js"></script>
 <script src="../src/utils/statistics.js"></script>
@@ -47,6 +49,7 @@
 <script src="../src/utils/statistics.js"></script>
 <script src="../src/utils/linspace.js"></script>
 <script src="../src/utils/meshgrid.js"></script>
+-- >
 <!-- Test Libraries -->
 <script src="./main.js"></script>
 <script src="./cluster/k_means_test.js"></script>
