--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
 		<script src="../sushi/src/sushi.js"></script>
 		<script src="../sushi/src/sushi_cl.js"></script>
 		
-		<!-- SushiML Main Libraries -->
+		<!-- Tempura Main Libraries -->
 		<script src="../src/tempura.js"></script>
 		<script src="../src/utils/utils.js"></script>
 		<script src="../src/utils/statistics.js"></script>
