--- a/tests/main.html
+++ b/tests/main.html
@@ -17,7 +17,7 @@
 <!--  Sushi -->
 <script src="../sushi/src/sushi.js"></script>
 <script src="../sushi/src/sushi_cl.js"></script>
-<!-- SushiML Main Libraries -->
+<!-- Tempura Main Libraries -->
 <script src="../bin/tempura.js"></script>
 <!--
 <script src="../src/tempura.js"></script>
