--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Neo : Machine Learning Library for AgentSmith">
+    <meta name="description" content="Tempura : Machine Learning Library for Sushi">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Neo</title>
+    <title>Tempura</title>
   </head>
 
   <body>
@@ -15,14 +15,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/mil-tokyo/neo">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/mil-tokyo/tempura">View on GitHub</a>
 
-          <h1 id="project_title">Neo</h1>
-          <h2 id="project_tagline">Machine Learning Library for AgentSmith</h2>
+          <h1 id="project_title">Tempura</h1>
+          <h2 id="project_tagline">Machine Learning Library for Sushi</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/mil-tokyo/neo/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/mil-tokyo/neo/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/mil-tokyo/tempura/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/mil-tokyo/tempura/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -30,37 +30,32 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h2>What is Neo</h2>
-	Neo is a machine learning library written in JavaScript, which is built on AgentSmith. Neo provides efficient, simple, and powerful tools for data analysis.
+	<h2>What is Tempura</h2>
+	Tempura is a machine learning library written in JavaScript, which is built on Sushi. Tempura provides efficient, simple, and powerful tools for data analysis.
 
 	<h2>Getting Started</h2>
 	In order to load codes in appropriate order while meeting dependency, assembling all codes to one file is necessary. It can be done by running following command.  
-	<pre><code>$ cd your_repo_root/neo
+	<pre><code>$ cd your_repo_root/tempura
 $ python compile.py
 </code></pre>
-	After that, neo.js is generated. When Neo is used, this file should be read.
-	You can understand how to use Neo through <a href="./demo/index.html">demonstration</a>. The only thing you have to do is to select method and run it. Data and parameters of model can be changed. In this demonstration, <a href="https://github.com/mil-tokyo/agent_smith">Trinity</a>, drawing library build on AgentSmith, is used to plot points and draw curves. 
-	For more information, see <a href="./docs/index.html">Neo Documentation page</a>.
+	After that, tempura.js will be generated. When Tempura is used, this file should be load.
+	You can understand how to use Tempura through <a href="./demo/index.html">demonstration</a>. The only thing you have to do is to select method and run it. Data and parameters of model can be changed. In this demonstration, <a href="https://github.com/mil-tokyo/soba">Soba</a>, drawing library build on Sushi, is used to plot points and draw curves. 
+	For more information, see <a href="./docs/index.html">Tempura Documentation page</a>.
 
 	<ul id="getting started">
-	<li class="content list"><a href="https://github.com/mil-tokyo/agent_smith">Getting AgentSmith</a></li>
-	<li class="content list"><a href="./docs/index.html">Neo Documentation page</a></li>
-	<li class="content list"><a href="./demo/index.html">Neo Demo page</a></li>
-	<li class="content list"><a href="http://www.amazon.co.jp">Neo Mailing list</a></li>
+	<li class="content list"><a href="https://github.com/mil-tokyo/sushi">Getting Sushi</a></li>
+	<li class="content list"><a href="./docs/index.html">Tempura Documentation page</a></li>
+	<li class="content list"><a href="./demo/index.html">Tempura Demo page</a></li>
+	<li class="content list"><a href="http://www.amazon.co.jp">Tempura Mailing list</a></li>
 	</ul>
 
-	<h2>More Information</h2>
-	<h3>How to demo</h3>
-	<h3>How to test</h3>
-	<h3>
-	  <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
       </section>
     </div>
     
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Neo maintained by <a href="https://github.com/mil-tokyo">mil-tokyo</a></p>
+        <p class="copyright">Tempura maintained by <a href="https://github.com/mil-tokyo">mil-tokyo</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
