--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
 	Tempura is a machine learning library written in JavaScript, which is built on Sushi. Tempura provides efficient, simple, and powerful tools for data analysis.
 
 	<h2>Getting Started</h2>
-	In order to load codes in appropriate order while meeting dependency, assembling all codes to one file is necessary. It can be done by running following command.  
+	In order to load codes in appropriate order while meeting dependency, assembling all codes to one file is necessary. It can be done by running following command.
+	<p>
 	<pre><code>$ cd your_repo_root/tempura
 $ python compile.py
 </code></pre>
+	<p>
 	After that, tempura.js will be generated. When Tempura is used, this file should be load.
-	You can understand how to use Tempura through <a href="./demo/index.html">demonstration</a>. The only thing you have to do is to select method and run it. Data and parameters of model can be changed. In this demonstration, <a href="https://github.com/mil-tokyo/soba">Soba</a>, drawing library build on Sushi, is used to plot points and draw curves. 
-	For more information, see <a href="./docs/index.html">Tempura Documentation page</a>.
+	You can understand how to use Tempura through <a href="./demo/index.html">demonstration</a>. The only thing you have to do is to select method and run it. Data and parameters of model can be changed. In this demonstration, <a href="https://github.com/mil-tokyo/soba">Soba</a>, drawing library build on Sushi, is used to plot points and draw curves. For more information, see <a href="./docs/index.html">Tempura Documentation page</a>.
 
+	<h2>More Information</h2>
 	<ul id="getting started">
 	<li class="content list"><a href="https://github.com/mil-tokyo/sushi">Getting Sushi</a></li>
 	<li class="content list"><a href="./docs/index.html">Tempura Documentation page</a></li>
