--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 $ python compile.py
 </code></pre>
 	<p>
-	After that, tempura.js will be generated. When Tempura is used, this file should be load.
+	After that, tempura.js will be generated. When You use Tempura, this file should be loaded.
 	You can understand how to use Tempura through <a href="./demo/index.html">demonstration</a>. The only thing you have to do is to select method and run it. Data and parameters of model can be changed. In this demonstration, <a href="https://github.com/mil-tokyo/soba">Soba</a>, drawing library build on Sushi, is used to plot points and draw curves. For more information, see <a href="./docs/index.html">Tempura Documentation page</a>.
 
 	<h2>More Information</h2>
