--- a/tests/main.html
+++ b/tests/main.html
@@ -68,6 +68,7 @@
 <script src="./linear_model/online_learning/passive_aggressive_test.js"></script>
 <script src="./linear_model/online_learning/confidence_weighted_test.js"></script>
 <script src="./linear_model/online_learning/soft_confidence_weighted_test.js"></script>
+<script src="./linear_model/online_learning/adaptive_reguralization_of_weight_test.js"></script>
 <script src="./linear_model/logistic_test.js"></script>
 <script src="./linear_model/sgd_regressor_test.js"></script>
 <script src="./utils/meshgrid_test.js"></script>
