Fixed bugs in demo/index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,26 +9,7 @@
 		<script src="../sushi/src/sushi_cl.js"></script>
 
 		<!-- Tempura Main Libraries -->
-		<script src="../src/tempura.js"></script>
-		<script src="../src/utils/utils.js"></script>
-		<script src="../src/utils/statistics.js"></script>
-		<script src="../src/utils/checkargs.js"></script>
-		<script src="../src/utils/linspace.js"></script>
-		<script src="../src/utils/meshgrid.js"></script>
-		<script src="../src/linear_model/linear_model.js"></script>
-		<script src="../src/linear_model/base.js"></script>
-		<script src="../src/linear_model/online_learning/online_learning.js"></script>
-		<script src="../src/linear_model/online_learning/perceptron.js"></script>
-		<script src="../src/linear_model/sgd_regressor.js"></script>
-		<script src="../src/metrics/metrics.js"></script>
-		<script src="../src/metrics/pairwise.js"></script>
-		<script src="../src/neighbors/neighbors.js"></script>
-		<script src="../src/neighbors/nearest_neighbors.js"></script>
-		<script src="../src/neighbors/classification.js"></script>
-		<script src="../src/cluster/cluster.js"></script>
-		<script src="../src/cluster/k_means.js"></script>
-		<script src="../src/mixture/mixture.js"></script>
-		<script src="../src/mixture/gmm.js"></script>
+		<script src="../bin/tempura.js"></script>
 
 		<!-- Soba Libraries and dependencies -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
